# advent-of-code

./: LICENSE  README.md  advent_of_code.opam  dune  dune-project
.github/workflows/: tests.yml
2021/day1/: day1.ml
2021/day3/: day3.ml
2022/day1/: day1.ml
2022/day2/: day2.ml
2022/day3/: day3.ml  test.txt
2022/day4/: day4.ml
2023/day1/: day1.ml
day1/: day1.ml
day2/: day2.ml
day3/: day3.ml
lib/: helpers.ml
